--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "re-frisk": "shadow-cljs run re-frisk-rn.core/start"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
